// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate TypeScript user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.
import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import '/Users/ovidiu/cosmos/src/polyfills.js';
import '/Users/ovidiu/cosmos/src/global.css';

import * as fixture0 from '/Users/ovidiu/cosmos/src/Counter/Counter.fixture.js';
import * as fixture1 from '/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.js';

import * as decorator0 from '/Users/ovidiu/cosmos/src/cosmos.decorator.js';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
 'src/Counter/Counter.fixture.tsx': { module: fixture0 },
 'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
 'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: false,
  fixtures,
  decorators,
};
"
`;

exports[`should generate TypeScript user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.
import { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import './polyfills.js';
import './global.css';

import * as fixture0 from './Counter/Counter.fixture.js';
import * as fixture1 from './CounterButton/CounterButton.fixture.js';

import * as decorator0 from './cosmos.decorator.js';

export const rendererConfig: RendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
 'src/Counter/Counter.fixture.tsx': { module: fixture0 },
 'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
 'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: false,
  fixtures,
  decorators,
};
"
`;

exports[`should generate user deps module with absolute paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

import * as fixture0 from '/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx';
import * as fixture1 from '/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx';

import * as decorator0 from '/Users/ovidiu/cosmos/src/cosmos.decorator.tsx';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
 'src/Counter/Counter.fixture.tsx': { module: fixture0 },
 'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
 'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers = {
  lazy: false,
  fixtures,
  decorators,
};
"
`;

exports[`should generate user deps module with relative paths 1`] = `
"// This file is automatically generated by Cosmos. Add it to .gitignore and
// only edit if you know what you're doing.

import './polyfills.ts';
import './global.css';

import * as fixture0 from './Counter/Counter.fixture.tsx';
import * as fixture1 from './CounterButton/CounterButton.fixture.tsx';

import * as decorator0 from './cosmos.decorator.tsx';

export const rendererConfig = {
  "playgroundUrl": "http://localhost:5002"
};

const fixtures = {
 'src/Counter/Counter.fixture.tsx': { module: fixture0 },
 'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
 'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers = {
  lazy: false,
  fixtures,
  decorators,
};
"
`;
